--- a/Exploro/package.json
+++ b/Exploro/package.json
@@ -27,10 +27,13 @@
     "@capacitor/haptics": "5.0.1",
     "@capacitor/keyboard": "5.0.1",
     "@capacitor/status-bar": "5.0.1",
+    "@googlemaps/markerclusterer": "^2.0.15",
     "@ionic/angular": "^7.0.0",
+    "@types/google.maps": "^3.53.1",
     "capacitor": "^0.5.5",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "supercluster": "^8.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -49,6 +52,7 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
+    "@types/supercluster": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.26.0",
