--- a/Exploro/android/app/src/main/AndroidManifest.xml
+++ b/Exploro/android/app/src/main/AndroidManifest.xml
@@ -34,7 +34,10 @@
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
     </application>
-
+    <!-- Geolocalizzazione -->
+      <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+      <uses-feature android:name="android.hardware.location.gps" />
     <!-- Permissions -->
 
     <uses-permission android:name="android.permission.INTERNET" />
