--- a/Exploro/android/app/src/main/AndroidManifest.xml
+++ b/Exploro/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,11 @@
       <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
       <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
       <uses-feature android:name="android.hardware.location.gps" />
+
+      <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <!-- Permissions -->
 
     <uses-permission android:name="android.permission.INTERNET" />
