--- a/Exploro/package.json
+++ b/Exploro/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.0.0",
     "@capacitor/android": "5.0.1",
     "@capacitor/app": "5.0.1",
+    "@capacitor/camera": "^5.0.2",
     "@capacitor/core": "5.0.1",
     "@capacitor/geolocation": "^5.0.2",
     "@capacitor/haptics": "5.0.1",
