--- a/Exploro/package.json
+++ b/Exploro/package.json
@@ -25,6 +25,7 @@
     "@capacitor/app": "5.0.1",
     "@capacitor/camera": "^5.0.2",
     "@capacitor/core": "5.0.1",
+    "@capacitor/filesystem": "^5.0.2",
     "@capacitor/geolocation": "^5.0.2",
     "@capacitor/haptics": "5.0.1",
     "@capacitor/keyboard": "5.0.1",
